feat：add send secret demo

--- a/src/WeComLoad.Admin.Blazor/Components/AddOpenApiApp.razor
+++ b/src/WeComLoad.Admin.Blazor/Components/AddOpenApiApp.razor
@@ -1,4 +1,4 @@
-﻿<div style="height:300px;" id="demo-get-depts">
+﻿<div style="height:300px;">
     <Button Type="@ButtonType.Primary" OnClick="() => GetCorpDeptsAsync()">获取部门列表</Button>
     <textarea value="@result" />
 </div>
