--- a/src/WeComLoad.Admin.Blazor/Components/SendAppSecret.razor
+++ b/src/WeComLoad.Admin.Blazor/Components/SendAppSecret.razor
@@ -1,20 +1,76 @@
-﻿<div style="height:300px;" id="demo-get-depts">
-    <Button Type="@ButtonType.Primary" OnClick="() => GetCorpDeptsAsync()">获取部门列表</Button>
-    <textarea value="@result" />
+﻿<div style="height:200px;">
+    <Input style="margin-bottom: 20px;width: 300px;" Placeholder="请输入appId" @bind-Value="@appId" /><br />
+    <Button style="margin-bottom: 20px;" Type="@ButtonType.Primary" OnClick="() => GetSendSecretByAppIdAsync()">发送指定AppId Secret</Button><br />
+    <Button Type="@ButtonType.Primary" OnClick="() => GetSendSecretByExtContactAsync()">发送【外部联系人】Secret</Button>
+    <Button Type="@ButtonType.Primary" OnClick="() => GetSendSecretByContactAsync()">发送【通讯录同步】Secret</Button>
 </div>
 
 @code {
 
-    private string result = string.Empty;
-
+    private string appId;
 
     [Inject]
     public IWeComAdminSvc WeComAdminSvc { get; set; }
 
+    [Inject]
+    public MessageService MessageService { get; set; }
 
-    private async Task GetCorpDeptsAsync()
+    private async Task GetSendSecretByAppIdAsync()
     {
-        var model = await WeComAdminSvc.GetCorpDeptAsync();
-        result = JsonConvert.SerializeObject(model);
+        if (string.IsNullOrWhiteSpace(appId))
+        {
+            _ = MessageService.Error($"请输入appId");
+            return;
+        }
+        await SendSecretAsync(appId);
+    }
+
+
+    private async Task GetSendSecretByExtContactAsync()
+    {
+        var corpApp = await WeComAdminSvc.GetCorpAppAsync();
+        if (corpApp == null)
+        {
+            _ = MessageService.Error($"获取应用列表失败");
+            return;
+        }
+        // 获取客户联系、通讯录appid (app_open_id为固定值，2000002：通讯录同步助手，2000003：外部联系人)
+        var app = corpApp.OpenapiApps.FirstOrDefault(m => m.AppOpenId == 2000003);
+        if (app == null)
+        {
+            _ = MessageService.Error($"获取【通讯录同步】应用失败");
+            return;
+        }
+        await SendSecretAsync(app.AppId);
+    }
+
+    private async Task GetSendSecretByContactAsync()
+    {
+        var corpApp = await WeComAdminSvc.GetCorpAppAsync();
+        if (corpApp == null)
+        {
+            _ = MessageService.Error($"获取应用列表失败");
+            return;
+        }
+        var app = corpApp.OpenapiApps.FirstOrDefault(m => m.AppOpenId == 2000002);
+        if (app == null)
+        {
+            _ = MessageService.Error($"获取【外部联系人】应用失败");
+            return;
+        }
+        await SendSecretAsync(app.AppId);
+    }
+
+    private async Task SendSecretAsync(string appId)
+    {
+        var result = await WeComAdminSvc.SendSecretAsync(appId);
+        if (result)
+        {
+            _ = MessageService.Success("发送成功，请在企微客户端查看");
+        }
+        else
+        {
+            _ = MessageService.Error("发送失败");
+        }
     }
 }
